# POCO

./: CMakeLists.txt  README.md
include/: Node.h  P2PMessage.h  PeerConnection.h  PeerConnectionFactory.h
src/: Node.cpp  P2PMessage.cpp  PeerConnection.cpp  main.cpp
